Se agregan funciones ibm bpm se modifica el movermouse a 1 min